--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,13 @@ body {
 /* NavBar */
 .navStyleAnchor {
   @apply px-3 py-1 rounded-md 
-           transition-colors duration-300 
+           transition-colors duration-500 
            group-hover:bg-purple-100;
 }
 
 .navStyleSpan {
   @apply text-gray-700 
-             transition-colors duration-300 
+             transition-colors duration-500 
              group-hover:bg-clip-text group-hover:text-transparent 
              group-hover:bg-gradient-to-r group-hover:from-purple-500 group-hover:to-pink-500;
 }
@@ -24,5 +24,39 @@ body {
         px-2 md:px-5 py-2 rounded-md font-semibold text-white
          bg-gradient-to-r from-[#8A3FFF] to-[#7c3af5bb]
          hover:from-[#7B3AF5] hover:to-[#5F2ED4]
-         transition-colors text-sm md:text-base;
+         transition-colors text-sm md:text-base duration-500 ;
 }
+
+
+/* Banner Sec */
+
+
+
+
+
+/* Footer anchor link style without group */
+.footerLink {
+  @apply relative text-gray-400 transition-colors duration-500;
+}
+
+.footerLink:hover {
+  @apply text-transparent bg-clip-text bg-gradient-to-r from-purple-500 to-pink-500;
+}
+
+.footerLink::after {
+  content: '';
+  @apply absolute bottom-0 left-0 w-0 h-[1px] bg-gradient-to-r from-purple-500 to-pink-500 transition-all duration-500;
+}
+
+.footerLink:hover::after {
+  @apply w-full;
+}
+
+
+
+
+/* For Icon */
+.footerIcon {
+  @apply text-[#a1a1aa];
+}
+
